--- a/drupal/sites/all/themes/xeros_theme/sass/components/_report-block.scss
+++ b/drupal/sites/all/themes/xeros_theme/sass/components/_report-block.scss
@@ -57,7 +57,7 @@
       padding-bottom: 20px;
       text-align: left;
       position: relative;
-
+      min-height: 352px;
       .col {
         min-height: 250px;
       }
